# yadcards_engine

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/StateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h
tests/: CMakeLists.txt  hellotest.cpp
